# AssessAgent

./: README.md  main.py  pyproject.toml  render.yaml  requirements.txt
app/: main.py  requirements.txt
app/data/: cleaned_shl_catalog.json
app/modules/: embedding.py
app/scripts/: clean_json.py  load_vectorstore.py
app/services/: agent.py  comparator.py  conversation.py  recommendation.py  retriever.py
app/vectorstore/: metadata.pkl  shl_catalog.faiss  tfidf_vectorizer.pkl
client/: config.py  streamlit.py
